--- a/pages/10258.html
+++ b/pages/10258.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5210/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -558,11 +557,11 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>A <em>real structure</em> on a <a class='existingWikiWord' href='/nlab/show/complex+vector+space'>complex vector space</a> <math class='maruku-mathml' display='inline' id='mathml_fe4263a695687ea4420a320b69cbfc8addb2f4ce_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/antilinear+map'>antilinear map</a> <math class='maruku-mathml' display='inline' id='mathml_fe4263a695687ea4420a320b69cbfc8addb2f4ce_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>σ</mi><mo lspace='verythinmathspace'>:</mo><mi>V</mi><mo>→</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>\sigma \colon V \to V</annotation></semantics></math> which is an <a class='existingWikiWord' href='/nlab/show/involution'>involution</a>.</p>
+<p>A <em>real structure</em> on a <a class='existingWikiWord' href='/nlab/show/complex+vector+space'>complex vector space</a> <math class='maruku-mathml' display='inline' id='mathml_019f35c154a530f36a5ce750ef92d43b6e8d2975_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> is an <a class='existingWikiWord' href='/nlab/show/antilinear+map'>antilinear map</a> <math class='maruku-mathml' display='inline' id='mathml_019f35c154a530f36a5ce750ef92d43b6e8d2975_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>σ</mi><mo lspace='verythinmathspace'>:</mo><mi>V</mi><mo>→</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>\sigma \colon V \to V</annotation></semantics></math> which is an <a class='existingWikiWord' href='/nlab/show/involution'>involution</a>.</p>
 
-<p>Equivalently this is a <a class='existingWikiWord' href='/nlab/show/real+vector+space'>real vector space</a> <math class='maruku-mathml' display='inline' id='mathml_fe4263a695687ea4420a320b69cbfc8addb2f4ce_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math> and an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a> <math class='maruku-mathml' display='inline' id='mathml_fe4263a695687ea4420a320b69cbfc8addb2f4ce_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi><mo>≃</mo><mi>W</mi><msub><mo>⊗</mo> <mi>ℝ</mi></msub><mi>ℂ</mi></mrow><annotation encoding='application/x-tex'>V \simeq W \otimes_{\mathbb{R}} \mathbb{C}</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_fe4263a695687ea4420a320b69cbfc8addb2f4ce_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> with its <a class='existingWikiWord' href='/nlab/show/complexification'>complexification</a>.</p>
+<p>Equivalently this is a <a class='existingWikiWord' href='/nlab/show/real+vector+space'>real vector space</a> <math class='maruku-mathml' display='inline' id='mathml_019f35c154a530f36a5ce750ef92d43b6e8d2975_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi></mrow><annotation encoding='application/x-tex'>W</annotation></semantics></math> and an <a class='existingWikiWord' href='/nlab/show/isomorphism'>isomorphism</a> <math class='maruku-mathml' display='inline' id='mathml_019f35c154a530f36a5ce750ef92d43b6e8d2975_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi><mo>≃</mo><mi>W</mi><msub><mo>⊗</mo> <mi>ℝ</mi></msub><mi>ℂ</mi></mrow><annotation encoding='application/x-tex'>V \simeq W \otimes_{\mathbb{R}} \mathbb{C}</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_019f35c154a530f36a5ce750ef92d43b6e8d2975_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>V</mi></mrow><annotation encoding='application/x-tex'>V</annotation></semantics></math> with its <a class='existingWikiWord' href='/nlab/show/complexification'>complexification</a>.</p>
 
-<p>Here <math class='maruku-mathml' display='inline' id='mathml_fe4263a695687ea4420a320b69cbfc8addb2f4ce_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi><mo>=</mo><mi>Eig</mi><mo stretchy='false'>(</mo><mi>σ</mi><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>↪</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>W = Eig(\sigma,1) \hookrightarrow V</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/eigenspace'>eigenspace</a> of <math class='maruku-mathml' display='inline' id='mathml_fe4263a695687ea4420a320b69cbfc8addb2f4ce_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>σ</mi></mrow><annotation encoding='application/x-tex'>\sigma</annotation></semantics></math> for <a class='existingWikiWord' href='/nlab/show/eigenvalue'>eigenvalue</a> 1 and <math class='maruku-mathml' display='inline' id='mathml_fe4263a695687ea4420a320b69cbfc8addb2f4ce_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi><mo>⊗</mo><mo stretchy='false'>{</mo><mi>i</mi><mo stretchy='false'>}</mo><mo>=</mo><mi>Eig</mi><mo stretchy='false'>(</mo><mi>σ</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>↪</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>W \otimes \{i\} = Eig(\sigma,-1) \hookrightarrow V</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/eigenspace'>eigenspace</a> for <a class='existingWikiWord' href='/nlab/show/eigenvalue'>eigenvalue</a> -1.</p>
+<p>Here <math class='maruku-mathml' display='inline' id='mathml_019f35c154a530f36a5ce750ef92d43b6e8d2975_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi><mo>=</mo><mi>Eig</mi><mo stretchy='false'>(</mo><mi>σ</mi><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>↪</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>W = Eig(\sigma,1) \hookrightarrow V</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/eigenspace'>eigenspace</a> of <math class='maruku-mathml' display='inline' id='mathml_019f35c154a530f36a5ce750ef92d43b6e8d2975_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>σ</mi></mrow><annotation encoding='application/x-tex'>\sigma</annotation></semantics></math> for <a class='existingWikiWord' href='/nlab/show/eigenvalue'>eigenvalue</a> 1 and <math class='maruku-mathml' display='inline' id='mathml_019f35c154a530f36a5ce750ef92d43b6e8d2975_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>W</mi><mo>⊗</mo><mo stretchy='false'>{</mo><mi>i</mi><mo stretchy='false'>}</mo><mo>=</mo><mi>Eig</mi><mo stretchy='false'>(</mo><mi>σ</mi><mo>,</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn><mo stretchy='false'>)</mo><mo>↪</mo><mi>V</mi></mrow><annotation encoding='application/x-tex'>W \otimes \{i\} = Eig(\sigma,-1) \hookrightarrow V</annotation></semantics></math> is the <a class='existingWikiWord' href='/nlab/show/eigenspace'>eigenspace</a> for <a class='existingWikiWord' href='/nlab/show/eigenvalue'>eigenvalue</a> -1.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -576,7 +575,15 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/KR+cohomology+theory'>KR-theory</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/real+space'>real space</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/real+oriented+cohomology+theory'>real oriented cohomology theory</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/KR+cohomology+theory'>KR-theory</a></li>
+</ul>
 </li>
 </ul>
 
@@ -593,19 +600,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on March 20, 2014 08:06:17 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.154.77)
+  <p>
+  Last revised on May  9, 2018 at 12:01:24.
+  See the <a href="https://ncatlab.org/nlab/history/real structure" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/real+structure" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/real+structure/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/real+structure" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/real+structure" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/real+structure" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/real+structure/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/real+structure" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/real+structure" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/real structure/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/real+structure" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/real+structure" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/real+structure" id="view_source" rel="nofollow">Source</a>
