--- a/pages/16534.html
+++ b/pages/16534.html
@@ -291,6 +291,7 @@ margin-left: 0em;
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
     <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
@@ -511,7 +512,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-superconformal+QFT'>6d (2,0)-supersymmetric QFT</a></p>
 </li>
 </ul>
 </li>
@@ -587,7 +588,7 @@ margin-left: 0em;
 <h3 id='12_m5brane'>1/2 M5-brane</h3>
 
 <p><a class='existingWikiWord' href='/nlab/show/M5-brane'>M5-brane</a> with <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+monopole'>KK-monopole</a>:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_88348686e430419fe7317ccb98d326190bbe8a5d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>5</mn><mo stretchy='false'>|</mo><mi>M</mi><mn>5</mn><mo>,</mo><mi>KK</mi><mo stretchy='false'>)</mo><mo>=</mo><mrow><mo>{</mo><mrow><mtable><mtr><mtd><msub><mi>x</mi> <mn>0</mn></msub></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><msub><mi>x</mi> <mn>5</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>6</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>7</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>8</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>9</mn></msub></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd></mtr> <mtr><mtd><msub><mi>x</mi> <mn>0</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>1</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>2</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>3</mn></msub></mtd> <mtd><mi>z</mi></mtd> <mtd><msub><mi>x</mi> <mn>5</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>6</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>7</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>8</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>9</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>10</mn></msub></mtd></mtr></mtable></mrow></mrow></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_a28f832f1e5a469dd088948cb7d28066a3d47292_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>5</mn><mo stretchy='false'>|</mo><mi>M</mi><mn>5</mn><mo>,</mo><mi>KK</mi><mo stretchy='false'>)</mo><mo>=</mo><mrow><mo>{</mo><mrow><mtable><mtr><mtd><msub><mi>x</mi> <mn>0</mn></msub></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><msub><mi>x</mi> <mn>5</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>6</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>7</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>8</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>9</mn></msub></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd></mtr> <mtr><mtd><msub><mi>x</mi> <mn>0</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>1</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>2</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>3</mn></msub></mtd> <mtd><mi>z</mi></mtd> <mtd><msub><mi>x</mi> <mn>5</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>6</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>7</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>8</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>9</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>10</mn></msub></mtd></mtr></mtable></mrow></mrow></mrow><annotation encoding='application/x-tex'>
   (5\vert M5, KK)
   =
   \left\{
@@ -641,20 +642,21 @@ margin-left: 0em;
 </p>
 
 <p>
+ 
 </p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on April 22, 2018 at 10:51:55.
+  Last revised on May  9, 2018 at 12:07:31.
   See the <a href="https://ncatlab.org/nlab/history/brane intersection" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/brane+intersection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/brane+intersection/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/brane+intersection" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/brane+intersection" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-
+  <a href="/nlab/edit/brane+intersection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/brane+intersection/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/brane+intersection" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/brane+intersection" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/brane intersection/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
     <a href="/nlab/print/brane+intersection" accesskey="p" id="view_print" rel="nofollow">Print</a>
