--- a/pages/16790.html
+++ b/pages/16790.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -324,7 +323,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/Poincar%C3%A9+Lie+algebra'>Poincaré Lie algebra</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/super+Poincare+Lie+algebra'>super Poincaré Lie algebra</a>, <a class='existingWikiWord' href='/nlab/show/11d+supergravity+Lie+3-algebra'>supergravity Lie 3-algebra</a>, <a class='existingWikiWord' href='/nlab/show/supergravity+Lie+6-algebra'>supergravity Lie 6-algebra</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/super+Poincar%C3%A9+Lie+algebra'>super Poincaré Lie algebra</a>, <a class='existingWikiWord' href='/nlab/show/11d+supergravity+Lie+3-algebra'>supergravity Lie 3-algebra</a>, <a class='existingWikiWord' href='/nlab/show/supergravity+Lie+6-algebra'>supergravity Lie 6-algebra</a></li>
 </ul>
 </li>
 
@@ -524,11 +523,25 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>That the near horizon geometry of <a class='existingWikiWord' href='/nlab/show/black+brane'>black branes</a> in <a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a> is <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spacetime'>anti de Sitter spacetime</a> times some compact space is due to</p>
+<p>That the near horizon geometry of the <span class='newWikiWord'>extremal<a href='/nlab/new/extremal+black+hole'>?</a></span> <a class='existingWikiWord' href='/nlab/show/Reissner-Nordstr%C3%B6m+spacetime'>Reissner-Nordström black hole</a> in <math class='maruku-mathml' display='inline' id='mathml_902c69bfcee921489bc13d663c9588a43f635291_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N}=2</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/4-dimensional+supergravity'>4d supergravity</a> in <math class='maruku-mathml' display='inline' id='mathml_902c69bfcee921489bc13d663c9588a43f635291_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>AdS</mi> <mn>2</mn></msub><mo>×</mo><msup><mi>S</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>AdS_2 \times S^2</annotation></semantics></math> was observed in</p>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Gary+Gibbons'>Gary Gibbons</a>, <a class='existingWikiWord' href='/nlab/show/Paul+Townsend'>Paul Townsend</a>, Phys. Rev. Lett. 71, (1993) 3754</p>
+<li><a class='existingWikiWord' href='/nlab/show/Gary+Gibbons'>Gary Gibbons</a>, in F. del Aguila, <a class='existingWikiWord' href='/nlab/show/Jos%C3%A9+de+Azc%C3%A1rraga'>J. de Azcarraga</a>], <a class='existingWikiWord' href='/nlab/show/Luis+Ib%C3%A1%C3%B1ez'>Luis Ibanez</a> (eds.) <em>Supersymmetry, Supergravity and Related Topics</em></li>
+</ul>
+
+<p>That the near horizon geometry of <a class='existingWikiWord' href='/nlab/show/black+brane'>black branes</a> in <a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a> is <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spacetime'>anti de Sitter spacetime</a> times some <a class='existingWikiWord' href='/nlab/show/compact+space'>compact space</a> is due to</p>
+
+<ul>
+<li id='GibbonsTownsend93'>
+<p><a class='existingWikiWord' href='/nlab/show/Gary+Gibbons'>Gary Gibbons</a>, <a class='existingWikiWord' href='/nlab/show/Paul+Townsend'>Paul Townsend</a>, <em>Vacuum interpolation in supergravity via super p-branes</em>, Phys. Rev. Lett. 71, (1993) 3754 (<a href='https://arxiv.org/abs/hep-th/9307049'>arXiv:hep-th/9307049</a>)</p>
+</li>
+
+<li id='DuffGibbonsTownsend94'>
+<p><a class='existingWikiWord' href='/nlab/show/Michael+Duff'>Mike Duff</a>, <a class='existingWikiWord' href='/nlab/show/Gary+Gibbons'>Gary Gibbons</a>, <a class='existingWikiWord' href='/nlab/show/Paul+Townsend'>Paul Townsend</a>, <em>Macroscopic superstrings as interpolating solitons</em>, Phys. Lett. B. 332 (1994) 32 (<a href='https://arxiv.org/abs/hep-th/9405124'>arXiv:hep-th/9405124</a>)</p>
+</li>
+
+<li id='GibbonsHorowitzTownend95'>
+<p><a class='existingWikiWord' href='/nlab/show/Gary+Gibbons'>Gary Gibbons</a>, <a class='existingWikiWord' href='/nlab/show/Gary+Horowitz'>Gary Horowitz</a>, <a class='existingWikiWord' href='/nlab/show/Paul+Townsend'>Paul Townsend</a>, <em>Higher-dimensional resolution of dilatonic black hole singularities</em>, Class. Quant. Grav. 12 (1995) 297 (<a href='https://arxiv.org/abs/hep-th/9410073'>arXiv:hep-th/9410073</a>)</p>
 </li>
 
 <li>
@@ -540,11 +553,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>S. Ferrara, G. Gibbons and R. Kallosh, Nucl. Phys. B500, (1997) 75;</p>
+<p><a class='existingWikiWord' href='/nlab/show/Sergio+Ferrara'>Sergio Ferrara</a>, <a class='existingWikiWord' href='/nlab/show/Gary+Gibbons'>Gary Gibbons</a>, <a class='existingWikiWord' href='/nlab/show/Renata+Kallosh'>Renata Kallosh</a>, Nucl. Phys. B500, (1997) 75;</p>
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/Ali+Chamseddine'>Ali Chamseddine</a>, S. Ferrara, <a class='existingWikiWord' href='/nlab/show/Gary+Gibbons'>Gary Gibbons</a>, <a class='existingWikiWord' href='/nlab/show/Renata+Kallosh'>Renata Kallosh</a>, Phys. Rev. D55, (1997) 3647</p>
+<p><a class='existingWikiWord' href='/nlab/show/Ali+Chamseddine'>Ali Chamseddine</a>, <a class='existingWikiWord' href='/nlab/show/Sergio+Ferrara'>Sergio Ferrara</a>, <a class='existingWikiWord' href='/nlab/show/Gary+Gibbons'>Gary Gibbons</a>, <a class='existingWikiWord' href='/nlab/show/Renata+Kallosh'>Renata Kallosh</a>, Phys. Rev. D55, (1997) 3647</p>
 </li>
 </ul>
 
@@ -575,19 +588,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 18, 2016 14:59:21 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.209.183)
+  <p>
+  Last revised on May 10, 2018 at 02:48:11.
+  See the <a href="https://ncatlab.org/nlab/history/near-horizon geometry" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/near-horizon+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/near-horizon+geometry/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/near-horizon+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/near-horizon+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/near-horizon+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/near-horizon+geometry/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/near-horizon+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/near-horizon+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/near-horizon geometry/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/near-horizon+geometry" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/near-horizon+geometry" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/near-horizon+geometry" id="view_source" rel="nofollow">Source</a>
