--- a/pages/16790.html
+++ b/pages/16790.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8527/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -523,13 +523,13 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>That the near horizon geometry of the <span class='newWikiWord'>extremal<a href='/nlab/new/extremal+black+hole'>?</a></span> <a class='existingWikiWord' href='/nlab/show/Reissner-Nordstr%C3%B6m+spacetime'>Reissner-Nordström black hole</a> in <math class='maruku-mathml' display='inline' id='mathml_902c69bfcee921489bc13d663c9588a43f635291_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N}=2</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/4-dimensional+supergravity'>4d supergravity</a> in <math class='maruku-mathml' display='inline' id='mathml_902c69bfcee921489bc13d663c9588a43f635291_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>AdS</mi> <mn>2</mn></msub><mo>×</mo><msup><mi>S</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>AdS_2 \times S^2</annotation></semantics></math> was observed in</p>
+<p>That the near horizon geometry of the <span class='newWikiWord'>extremal<a href='/nlab/new/extremal+black+hole'>?</a></span> <a class='existingWikiWord' href='/nlab/show/Reissner-Nordstr%C3%B6m+spacetime'>Reissner-Nordström black hole</a> in <math class='maruku-mathml' display='inline' id='mathml_50eb8f884d82549b1fb52e79f623caa93a551abd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>\mathcal{N}=2</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/4-dimensional+supergravity'>4d supergravity</a> in <math class='maruku-mathml' display='inline' id='mathml_50eb8f884d82549b1fb52e79f623caa93a551abd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>AdS</mi> <mn>2</mn></msub><mo>×</mo><msup><mi>S</mi> <mn>2</mn></msup></mrow><annotation encoding='application/x-tex'>AdS_2 \times S^2</annotation></semantics></math> was observed in</p>
 
 <ul>
 <li><a class='existingWikiWord' href='/nlab/show/Gary+Gibbons'>Gary Gibbons</a>, in F. del Aguila, <a class='existingWikiWord' href='/nlab/show/Jos%C3%A9+de+Azc%C3%A1rraga'>J. de Azcarraga</a>], <a class='existingWikiWord' href='/nlab/show/Luis+Ib%C3%A1%C3%B1ez'>Luis Ibanez</a> (eds.) <em>Supersymmetry, Supergravity and Related Topics</em></li>
 </ul>
 
-<p>That the near horizon geometry of <a class='existingWikiWord' href='/nlab/show/black+brane'>black branes</a> in <a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a> is <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spacetime'>anti de Sitter spacetime</a> times some <a class='existingWikiWord' href='/nlab/show/compact+space'>compact space</a> is due to</p>
+<p>That the near horizon geometry of <a class='existingWikiWord' href='/nlab/show/black+brane'>black branes</a> in <a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a> is <a class='existingWikiWord' href='/nlab/show/anti+de+Sitter+spacetime'>anti de Sitter spacetime</a> times some <a class='existingWikiWord' href='/nlab/show/compact+space'>compact space</a> is apparently due to</p>
 
 <ul>
 <li id='GibbonsTownsend93'>
@@ -561,6 +561,12 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>A decent account is in</p>
+
+<ul>
+<li id='FigOFar98'><a class='existingWikiWord' href='/nlab/show/Jos%C3%A9+Figueroa-O%E2%80%99Farrill'>Jose Figueroa-O&#39;Farrill</a>, <em>Near-horizon geometries of supersymmetric branes</em>, talk at <a href='http://inspirehep.net/record/971430/'>SUSY 98</a> (<a href='https://arxiv.org/abs/hep-th/9807149'>arXiv:hep-th/9807149</a>, <a href='http://www.maths.ed.ac.uk/~jmf/CV/Seminars/SUSY98.pdf'>talk slides</a>)</li>
+</ul>
+
 <p>The observation that the resulting <a class='existingWikiWord' href='/nlab/show/isometry+group'>isometry group</a> is the bosonic body of one of the <a class='existingWikiWord' href='/nlab/show/orthosymplectic+super+Lie+algebra'>orthosymplectic super groups</a> is due to</p>
 
 <ul>
@@ -589,14 +595,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on May 10, 2018 at 02:48:11.
+  Last revised on May 10, 2018 at 08:44:28.
   See the <a href="https://ncatlab.org/nlab/history/near-horizon geometry" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/near-horizon+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/near-horizon+geometry/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/near-horizon+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/near-horizon+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/near-horizon+geometry" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/near-horizon+geometry/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/near-horizon+geometry" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/near-horizon+geometry" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/near-horizon geometry/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
