--- a/pages/6843.html
+++ b/pages/6843.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -291,6 +291,7 @@ margin-left: 0em;
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
     <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
@@ -310,7 +311,7 @@ margin-left: 0em;
 <li><a href='http://www.maths.ed.ac.uk/~jmf/'>webpage</a></li>
 </ul>
 
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_2176e3d307d408fbb81274f56a0f9a394009bac3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_e342d6088df41b19f75a9890344c11d923cb27b6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -331,6 +332,10 @@ margin-left: 0em;
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/4-sphere'>4-sphere</a>, <a class='existingWikiWord' href='/nlab/show/7-sphere'>7-sphere</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/near-horizon+geometry'>near horizon geometry</a></p>
 </li>
 
 <li>
@@ -412,18 +417,21 @@ margin-left: 0em;
 
 <p>
 </p>
+
+<p>
+</p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on April 25, 2018 at 07:44:19.
+  Last revised on May 10, 2018 at 08:34:56.
   See the <a href="https://ncatlab.org/nlab/history/José Figueroa-O’Farrill" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Jos%C3%A9+Figueroa-O%E2%80%99Farrill" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jos%C3%A9+Figueroa-O%E2%80%99Farrill/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Jos%C3%A9+Figueroa-O%E2%80%99Farrill" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jos%C3%A9+Figueroa-O%E2%80%99Farrill" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Jos%C3%A9+Figueroa-O%E2%80%99Farrill" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Jos%C3%A9+Figueroa-O%E2%80%99Farrill/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Jos%C3%A9+Figueroa-O%E2%80%99Farrill" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Jos%C3%A9+Figueroa-O%E2%80%99Farrill" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/José Figueroa-O’Farrill/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
