--- a/pages/10647.html
+++ b/pages/10647.html
@@ -291,8 +291,9 @@ margin-left: 0em;
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8532/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -399,12 +400,24 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#harmonic_coordinate_representation_and_regularity'>Harmonic coordinate representation and regularity</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a> <a class='existingWikiWord' href='/nlab/show/differential+form'>differential 2-form</a> with values in scalars obtained from the <a class='existingWikiWord' href='/nlab/show/Riemann+curvature'>Riemann curvature</a> of a <a class='existingWikiWord' href='/nlab/show/Riemannian+manifold'>Riemannian manifold</a>.</p>
+<p>Formally, Ricci curvature <math class='maruku-mathml' display='inline' id='mathml_d48fdbf2269ec249abd58c976b748649edbec2b8_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Ric</mi></mrow><annotation encoding='application/x-tex'>Ric</annotation></semantics></math> is a <a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a> <a class='existingWikiWord' href='/nlab/show/differential+form'>differential 2-form</a> with values in scalars obtained by contraction from the <a class='existingWikiWord' href='/nlab/show/Riemann+curvature'>Riemann curvature</a> of a <a class='existingWikiWord' href='/nlab/show/Riemannian+manifold'>Riemannian manifold</a>. Geometrically one may think <math class='maruku-mathml' display='inline' id='mathml_d48fdbf2269ec249abd58c976b748649edbec2b8_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Ric</mi><mo stretchy='false'>(</mo><mi>v</mi><mo>,</mo><mi>w</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Ric(v, w)</annotation></semantics></math> as the first order approximation of the infinitesimal behaviour of the surface spanned by <math class='maruku-mathml' display='inline' id='mathml_d48fdbf2269ec249abd58c976b748649edbec2b8_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>v</mi></mrow><annotation encoding='application/x-tex'>v</annotation></semantics></math> and <math class='maruku-mathml' display='inline' id='mathml_d48fdbf2269ec249abd58c976b748649edbec2b8_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>w</mi></mrow><annotation encoding='application/x-tex'>w</annotation></semantics></math>. This is made explicit by the following formula for the volume element around some point</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d48fdbf2269ec249abd58c976b748649edbec2b8_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>d</mi><msub><mi>μ</mi> <mi>g</mi></msub><mo>=</mo><mrow><mo>[</mo><mn>1</mn><mo>−</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>6</mn></mfrac></mstyle><msub><mi>R</mi> <mi>jk</mi></msub><msup><mi>x</mi> <mi>j</mi></msup><msup><mi>x</mi> <mi>k</mi></msup><mo>+</mo><mi>O</mi><mrow><mo>(</mo><mo stretchy='false'>|</mo><mi>x</mi><msup><mo stretchy='false'>|</mo> <mn>3</mn></msup><mo>)</mo></mrow><mo>]</mo></mrow><mi>d</mi><msub><mi>μ</mi> <mi>Euclidean</mi></msub><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+ d\mu _{g}=\left[1-{\tfrac {1}{6}}R_{jk}x^{j}x^{k}+O\left(|x|^{3}\right)\right]d\mu _{Euclidean}.
 
+</annotation></semantics></math></div>
 <p>A <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> with vanishing Ricci curvature is also called <em>Ricci flat</em>.</p>
+
+<h2 id='harmonic_coordinate_representation_and_regularity'>Harmonic coordinate representation and regularity</h2>
+
+<p>By a trick of DeTurck and Kazan (or already Lanczos?) in harmonic coordinates the Ricci tensor can be expressed as</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_d48fdbf2269ec249abd58c976b748649edbec2b8_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Ric</mi> <mrow></mrow></msub><mi>lm</mi><mo>=</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mfrac><mn>1</mn><mn>2</mn></mfrac><munder><mo lspace='thinmathspace' rspace='thinmathspace'>∑</mo> <mrow><mi>j</mi><mo>,</mo><mi>k</mi></mrow></munder><msub><mo>∂</mo> <mi>j</mi></msub><msup><mi>g</mi> <mi>jk</mi></msup><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><msub><mo>∂</mo> <mi>k</mi></msub><msub><mi>g</mi> <mi>lm</mi></msub><mo>+</mo><msub><mi>Q</mi> <mi>lm</mi></msub><mo stretchy='false'>(</mo><mi>g</mi><mo>,</mo><mo>∇</mo><mi>g</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+Ric_{}lm = -\frac{1}{2} \sum_{j,k} \partial_j g^{jk}(x) \partial_k g_{lm} + Q_{lm}(g, \nabla g)
+
+</annotation></semantics></math></div>
+<p>where <math class='maruku-mathml' display='inline' id='mathml_d48fdbf2269ec249abd58c976b748649edbec2b8_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>g</mi> <mi>jk</mi></msup></mrow><annotation encoding='application/x-tex'>g^{jk}</annotation></semantics></math> denotes the inverse of the metric tensor and <math class='maruku-mathml' display='inline' id='mathml_d48fdbf2269ec249abd58c976b748649edbec2b8_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Q</mi> <mi>lm</mi></msub></mrow><annotation encoding='application/x-tex'>Q_{lm}</annotation></semantics></math> is a quadratic form in <math class='maruku-mathml' display='inline' id='mathml_d48fdbf2269ec249abd58c976b748649edbec2b8_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>∇</mo><mi>g</mi></mrow><annotation encoding='application/x-tex'>\nabla g</annotation></semantics></math> with coefficients that are polynomials in the coefficients of <math class='maruku-mathml' display='inline' id='mathml_d48fdbf2269ec249abd58c976b748649edbec2b8_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>g</mi></mrow><annotation encoding='application/x-tex'>g</annotation></semantics></math>. Note that this formula involves only first derivatives of the metric tensor. This representation is especially useful in two ways: First, there are theorems that give bounds on the regularity of the metric tensor in harmonic coordinates under geometric assumptions (Anderson, Anderson and Cheeger, Naber). Second, by theory of partial differential equations one can conclude on regularity bounds for the metric tensor from regularity estimates for the Ricci tensor.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 <table><thead><tr><th><a class='existingWikiWord' href='/nlab/show/curvature'>curvature</a> in <a class='existingWikiWord' href='/nlab/show/Riemannian+geometry'>Riemannian geometry</a></th></tr></thead><tbody><tr><td style='text-align: left;'><a class='existingWikiWord' href='/nlab/show/Riemann+curvature'>Riemann curvature</a></td></tr>
@@ -431,6 +444,12 @@ margin-left: 0em;
 
 <ul>
 <li>Wikipedia, <em><a href='http://en.wikipedia.org/wiki/Ricci_curvature'>Ricci curvature</a></em></li>
+
+<li>Anderson, <em>Convergence and rigidity of manifolds under Ricci curvature bounds</em> , Invent. Math. (1990)</li>
+
+<li>Anderson und Cheever, <em><math class='maruku-mathml' display='inline' id='mathml_d48fdbf2269ec249abd58c976b748649edbec2b8_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>C</mi> <mi>α</mi></msup></mrow><annotation encoding='application/x-tex'>C^\alpha</annotation></semantics></math>-compactnes for manifolds with Ricci curvature and infectivity radius bounded below</em> J. Diff. Geo. (1992)</li>
+
+<li>Cheeger and Naber, <em>Lower bounds on Ricci curvature and quantitative behavior of singular sets</em> Invent. Math. (2013)</li>
 </ul>
 
 <p>
@@ -447,14 +466,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on April 25, 2018 at 03:16:55.
+  Last revised on May 14, 2018 at 09:59:51.
   See the <a href="https://ncatlab.org/nlab/history/Ricci curvature" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Ricci+curvature" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ricci+curvature/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Ricci+curvature" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ricci+curvature" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Ricci+curvature" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ricci+curvature/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Ricci+curvature" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ricci+curvature" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Ricci curvature/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
