--- a/pages/16997.html
+++ b/pages/16997.html
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8528/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8528/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1108,7 +1108,21 @@ margin-left: 0em;
 <h2 id='references'>References</h2>
 
 <ul>
-<li id='MisnerThorneWheeler73'><a class='existingWikiWord' href='/nlab/show/Charles+Misner'>Charles Misner</a>, <a class='existingWikiWord' href='/nlab/show/Kip+Thorne'>Kip Thorne</a>, <a class='existingWikiWord' href='/nlab/show/John+Wheeler'>John Archibald Wheeler</a>, pp. 875–876 of <em>Gravitation</em>, San Francisco: W. H. Freeman. (1973)</li>
+<li id='MisnerThorneWheeler73'>
+<p><a class='existingWikiWord' href='/nlab/show/Charles+Misner'>Charles Misner</a>, <a class='existingWikiWord' href='/nlab/show/Kip+Thorne'>Kip Thorne</a>, <a class='existingWikiWord' href='/nlab/show/John+Wheeler'>John Archibald Wheeler</a>, pp. 875–876 of <em>Gravitation</em>, San Francisco: W. H. Freeman. (1973)</p>
+</li>
+
+<li>
+<p>Pawel O. Mazur, <em>Black Uniqueness Theorems</em>, Proceedings of the 11th International Conference on General Relativity and Gravitation, ed. M. A. H. MacCallum, Cambridge University Press, Cambridge 1987, pp. 130-157 (<a href='https://arxiv.org/abs/hep-th/0101012'>arXiv:hep-th/0101012</a>)</p>
+</li>
+
+<li>
+<p>J. Lopes Costa, <em>On black hole uniqueness theorems</em>, 2010 (<a href='http://homepage.univie.ac.at/piotr.chrusciel/papers/TeseFinal.pdf'>pdf</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Stefan+Hollands'>Stefan Hollands</a>, Akihiro Ishibashi, <em>Black hole uniqueness theorems in higher dimensional spacetimes</em>, Classical and Quantum Gravity, Volume 29, Number 16 (<a href='https://arxiv.org/abs/1206.1164'>arXiv:1206.1164</a>)</p>
+</li>
 </ul>
 
 <p>See also</p>
@@ -1120,14 +1134,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on May 10, 2018 at 08:52:56.
+  Last revised on May 15, 2018 at 11:26:52.
   See the <a href="https://ncatlab.org/nlab/history/no-hair theorem" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/no-hair+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/no-hair+theorem/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/no-hair+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/no-hair+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/no-hair+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/no-hair+theorem/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/no-hair+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/no-hair+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/no-hair theorem/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
