--- a/pages/4362.html
+++ b/pages/4362.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -669,7 +668,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of ∞-compact categories</a></p>
 </li>
 
 <li>
@@ -969,7 +968,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-superconformal+QFT'>6d (2,0)-supersymmetric QFT</a></p>
 </li>
 </ul>
 </li>
@@ -1099,7 +1098,7 @@ margin-left: 0em;
 <p>This entry is about the article</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Daniel+Freed'>Dan Freed</a>, <em>Dirac charge quantization and generalized differential cohomology</em> Surveys in Differential Geometry, Int. Press, Somerville, MA, 2000, pp. 129–194 (<a href='http://arxiv.org/abs/hep-th/0011220'>arXiv:hep-th/0011220</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Daniel+Freed'>Dan Freed</a>, <em>Dirac charge quantization and generalized differential cohomology</em>, Surveys in Differential Geometry, Int. Press, Somerville, MA, 2000, pp. 129–194 (<a href='http://arxiv.org/abs/hep-th/0011220'>arXiv:hep-th/0011220</a>)</li>
 </ul>
 
 <p>This discusses how <a class='existingWikiWord' href='/nlab/show/differential+cohomology'>differential cohomology</a> – specifically <a class='existingWikiWord' href='/nlab/show/ordinary+differential+cohomology'>ordinary differential cohomology</a> and <a class='existingWikiWord' href='/nlab/show/differential+K-theory'>differential K-theory</a> – is the correct formalism for describing <a class='existingWikiWord' href='/nlab/show/field+%28physics%29'>gauge fields</a> and <a class='existingWikiWord' href='/nlab/show/higher+gauge+field'>higher gauge fields</a> in <a class='existingWikiWord' href='/nlab/show/physics'>physics</a> and <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a> (such as <a class='existingWikiWord' href='/nlab/show/higher+U%281%29-gauge+theory'>higher U(1)-gauge fields</a> like the <a class='existingWikiWord' href='/nlab/show/electromagnetic+field'>electromagnetic field</a>, the <a class='existingWikiWord' href='/nlab/show/Kalb-Ramond+field'>Kalb-Ramond field</a> and the <a class='existingWikiWord' href='/nlab/show/supergravity+C-field'>supergravity C-field</a>, and also the <a class='existingWikiWord' href='/nlab/show/RR+field'>RR-field</a>) and the <a class='existingWikiWord' href='/nlab/show/quantum+anomaly'>quantum anomaly</a> of their <a class='existingWikiWord' href='/nlab/show/action+functional'>action functionals</a>.</p>
@@ -1164,19 +1163,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 11, 2012 14:52:18 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (194.78.185.20)
+  <p>
+  Last revised on May 15, 2018 at 11:50:29.
+  See the <a href="https://ncatlab.org/nlab/history/Dirac charge quantization and generalized differential cohomology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Dirac+charge+quantization+and+generalized+differential+cohomology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dirac+charge+quantization+and+generalized+differential+cohomology/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Dirac+charge+quantization+and+generalized+differential+cohomology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dirac+charge+quantization+and+generalized+differential+cohomology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Dirac+charge+quantization+and+generalized+differential+cohomology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Dirac+charge+quantization+and+generalized+differential+cohomology/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/Dirac+charge+quantization+and+generalized+differential+cohomology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Dirac+charge+quantization+and+generalized+differential+cohomology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Dirac charge quantization and generalized differential cohomology/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Dirac+charge+quantization+and+generalized+differential+cohomology" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Dirac+charge+quantization+and+generalized+differential+cohomology" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Dirac+charge+quantization+and+generalized+differential+cohomology" id="view_source" rel="nofollow">Source</a>
