--- a/pages/4651.html
+++ b/pages/4651.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,7 +311,7 @@ margin-left: 0em;
 <div class='toc clickDown' tabindex='0'>
 <h3 id='context'>Context</h3>
 
-<h4 id='lie_theory'><math class='maruku-mathml' display='inline' id='mathml_d1cd853360c2b590318b3171c04019b01aba15f1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie theory</h4>
+<h4 id='lie_theory'><math class='maruku-mathml' display='inline' id='mathml_7b20e0f3dee907137bb69650480746ccf6843e08_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/infinity-Lie+theory'>∞-Lie theory</a></strong> (<a class='existingWikiWord' href='/nlab/show/higher+geometry'>higher geometry</a>)</p>
@@ -577,7 +576,7 @@ margin-left: 0em;
 
 <h2 id='examples'>Examples</h2>
 
-<h3 id='lie_groupoids_2'><math class='maruku-mathml' display='inline' id='mathml_d1cd853360c2b590318b3171c04019b01aba15f1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groupoids</h3>
+<h3 id='lie_groupoids_2'><math class='maruku-mathml' display='inline' id='mathml_7b20e0f3dee907137bb69650480746ccf6843e08_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groupoids</h3>
 
 <ul>
 <li>
@@ -603,7 +602,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_groups'><math class='maruku-mathml' display='inline' id='mathml_d1cd853360c2b590318b3171c04019b01aba15f1_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groups</h3>
+<h3 id='lie_groups'><math class='maruku-mathml' display='inline' id='mathml_7b20e0f3dee907137bb69650480746ccf6843e08_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie groups</h3>
 
 <ul>
 <li>
@@ -645,7 +644,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_algebroids_2'><math class='maruku-mathml' display='inline' id='mathml_d1cd853360c2b590318b3171c04019b01aba15f1_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebroids</h3>
+<h3 id='lie_algebroids_2'><math class='maruku-mathml' display='inline' id='mathml_7b20e0f3dee907137bb69650480746ccf6843e08_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebroids</h3>
 
 <ul>
 <li>
@@ -683,7 +682,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h3 id='lie_algebras'><math class='maruku-mathml' display='inline' id='mathml_d1cd853360c2b590318b3171c04019b01aba15f1_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebras</h3>
+<h3 id='lie_algebras'><math class='maruku-mathml' display='inline' id='mathml_7b20e0f3dee907137bb69650480746ccf6843e08_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-Lie algebras</h3>
 
 <ul>
 <li>
@@ -734,13 +733,15 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#properties'>Properties</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
-<p>A <em>matrix Lie algebra</em> is the <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a> that is canonically a sub-Lie algebra of the <span class='newWikiWord'>general linear algebra<a href='/nlab/new/general+linear+algebra'>?</a></span> <math class='maruku-mathml' display='inline' id='mathml_d1cd853360c2b590318b3171c04019b01aba15f1_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Mat</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo><mo>=</mo><mi>𝔤𝔩</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Mat(n) = \mathfrak{gl}(n)</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_d1cd853360c2b590318b3171c04019b01aba15f1_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>×</mo><mi>n</mi></mrow><annotation encoding='application/x-tex'>n \times n</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/matrix'>matrices</a>.</p>
+<p>A <em>matrix Lie algebra</em> is the <a class='existingWikiWord' href='/nlab/show/Lie+algebra'>Lie algebra</a> that is canonically a sub-Lie algebra of the <a class='existingWikiWord' href='/nlab/show/general+linear+Lie+algebra'>general linear Lie algebra</a> <math class='maruku-mathml' display='inline' id='mathml_7b20e0f3dee907137bb69650480746ccf6843e08_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Mat</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo><mo>=</mo><mi>𝔤𝔩</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Mat(n) = \mathfrak{gl}(n)</annotation></semantics></math> of <math class='maruku-mathml' display='inline' id='mathml_7b20e0f3dee907137bb69650480746ccf6843e08_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi><mo>×</mo><mi>n</mi></mrow><annotation encoding='application/x-tex'>n \times n</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/matrix'>matrices</a>.</p>
 
 <p>See also <a class='existingWikiWord' href='/nlab/show/matrix+Lie+group'>matrix Lie group</a>.</p>
 
 <h2 id='properties'>Properties</h2>
 
-<p>By <strong>Ado’s theorem</strong>, every finite-<a class='existingWikiWord' href='/nlab/show/dimension'>dimension</a>al Lie algebra over a <a class='existingWikiWord' href='/nlab/show/field'>field</a> of <a class='existingWikiWord' href='/nlab/show/characteristic'>characteristic</a> zero is a matrix Lie algebra. A similar statement fails for <a class='existingWikiWord' href='/nlab/show/Lie+group'>Lie groups</a>. Ado’s theorem has been used as a major step in the traditional proofs of the <a class='existingWikiWord' href='/nlab/show/Lie%27s+three+theorems'>Cartan–Lie theorem</a> on the existence of <a class='existingWikiWord' href='/nlab/show/Lie+integration'>integration of Lie algebras</a> to Lie groups.</p>
+<p>By <strong>Ado’s theorem</strong>, every finite-<a class='existingWikiWord' href='/nlab/show/dimension'>dimensional</a> Lie algebra over a <a class='existingWikiWord' href='/nlab/show/field'>field</a> of <a class='existingWikiWord' href='/nlab/show/characteristic+zero'>characteristic zero</a> is a matrix Lie algebra.</p>
+
+<p>A similar statement fails for <a class='existingWikiWord' href='/nlab/show/Lie+group'>Lie groups</a>. Ado’s theorem has been used as a major step in the traditional proofs of the <a class='existingWikiWord' href='/nlab/show/Lie%27s+three+theorems'>Cartan–Lie theorem</a> on the existence of <a class='existingWikiWord' href='/nlab/show/Lie+integration'>integration of Lie algebras</a> to Lie groups.</p>
 
 <p>
  
@@ -753,19 +754,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 22, 2010 04:21:06 
-  by <a class="existingWikiWord" href="/nlab/show/Toby+Bartels">Toby Bartels</a>
-  (75.88.94.254)
+  <p>
+  Last revised on May 17, 2018 at 04:57:55.
+  See the <a href="https://ncatlab.org/nlab/history/matrix Lie algebra" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/matrix+Lie+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/matrix+Lie+algebra/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/matrix+Lie+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/matrix+Lie+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/matrix+Lie+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/matrix+Lie+algebra/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/matrix+Lie+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/matrix+Lie+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/matrix Lie algebra/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/matrix+Lie+algebra" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/matrix+Lie+algebra" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/matrix+Lie+algebra" id="view_source" rel="nofollow">Source</a>
