--- a/pages/16762.html
+++ b/pages/16762.html
@@ -314,7 +314,19 @@ margin-left: 0em;
 <h2 id='related_concept'>Related concept</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/ADE+singularity'>ADE singularity</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/ADE+singularity'>ADE singularity</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/M-theory+lift+of+gauge+enhancement+on+D6-branes'>M-theory lift of gauge enhancement on D6-branes</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/triple+membrane+junction'>triple membrane junction</a></p>
+</li>
+</ul>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -333,19 +345,20 @@ margin-left: 0em;
 <p>
  
  
+ 
 </p>
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on May  6, 2018 at 02:07:05.
+  Last revised on May 17, 2018 at 04:53:42.
   See the <a href="https://ncatlab.org/nlab/history/resolution of singularities" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/resolution+of+singularities" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/resolution+of+singularities/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/resolution+of+singularities" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/resolution+of+singularities" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/resolution+of+singularities" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/resolution+of+singularities/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/resolution+of+singularities" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/resolution+of+singularities" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/resolution of singularities/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
